# router/router.go
@@ -39,9 +39,13 @@ func InitRouter() *gin.Engine {
 	//标签类
 	apiv1.GET("/tag/:id/articles", v1.GetTagArticles)
 	apiv1.GET("/tag", v1.GetTags)
+
 	//文章类
 	apiv1.GET("/article", v1.GetArticles)
 	apiv1.GET("/article/:id", v1.GetArticle)
+
+	//评论
+	apiv1.GET("/comments/:article_id", v1.GetComments)
 
 	apiv1.Use(middleware.JWT())
 	{
@@ -60,6 +64,12 @@ func InitRouter() *gin.Engine {
 		apiv1.POST("/article/:id/recover", v1.RecoverArticle)
 		apiv1.PUT("/article/:id/state", v1.UpdateArticle)
 		apiv1.POST("/article/:id/like", v1.LikeArticle)
+
+		//评论
+		apiv1.POST("/comment", v1.AddComment)
+		apiv1.POST("/comment/:id/reply", v1.AddReply)
+		apiv1.DELETE("/comment/:id", v1.DeleteComment)
+		// apiv1.DELETE("/reply/:id", v1.DeleteReply)
 
 		//用户类
 		apiv1.POST("/user/:id/follow", v1.FollowUser)
